--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
     </div>
 
     <p class="padding"> Introduction:
-        <br>A motherboard is the fundamental printed circuit board (PCB) in a computer. All components and external peripherals are connected through the motherboard.
-        <br>Random access memory(RAM) is the hardware in a computing device where the operating system (OS), applications, and currently used data are stored so that the device's processor can reach it quickly. RAM is the primary memory in a computer.
+        <br>·A motherboard is the fundamental printed circuit board (PCB) in a computer. All components and external peripherals are connected through the motherboard.
+        <br>·Random access memory(RAM) is the hardware in a computing device where the operating system (OS), applications, and currently used data are stored so that the device's processor can reach it quickly. RAM is the primary memory in a computer.
     </p>
 
     <div class="topnav">
