--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
     <p class="padding"> Introduction:
         <br>·A motherboard is the fundamental printed circuit board (PCB) in a computer. All components and external peripherals are connected through the motherboard.
         <br>·Random access memory(RAM) is the hardware in a computing device where the operating system (OS), applications, and currently used data are stored so that the device's processor can reach it quickly. RAM is the primary memory in a computer.
+        <br><a href="https://qiuqiuqiu6.github.io/QiuQiuQiu6_5/">Click here to return to the home page</a>
     </p>
 
     <div class="topnav">
@@ -147,7 +148,7 @@
     <div class="row">
         <div class="column">
         <h3><a id="1">Motherboard</a></h3>
-            <p class="columntwo">Motherboards can be found in almost all computers, especially desktop and notebook PCs. the components connected through them include chipsets, central processing units (CPUs) and memory. Peripherals include Wi-Fi, Ethernet, and graphics cards with graphics processing units, or GPUs.</p>
+            <p class="columntwo">Motherboards can be found in almost all computers, especially desktop and notebook PCs. the components connected through them include chipsets, central processing units (<a href="https://qiuqiuqiu6.github.io/QiuQiuQiu6_1/">CPUs</a>) and memory. Peripherals include Wi-Fi, Ethernet, and graphics cards with graphics processing units, or <a href="https://qiuqiuqiu6.github.io/QiuQiuQiu6_1/">GPUs</a></p>
             <p class="columntwo">Gaming motherboards are made for high performance computers; they are more powerful and versatile than motherboards for desktop and laptop computers.</p>
             <a class="columntwo" class="one" href="https://qiuqiuqiu6.github.io/QiuQiuQiu6/#1">Where is the motherboard usually located in the computer case?</a>
     </div>
